# pisya_bot

./: .gitignore  pyproject.toml  pyrightconfig.json
src/: main.py  utils.py
src/commands/: help.py  pisya.py  reset.py  start.py  top.py  top_score.py
